--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
-    "react-select": "^5.6.1",
+    "react-select": "^5.7.0",
+    "redux": "^4.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
