--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.7.1",
     "react-pdf": "^6.2.2",
@@ -22,7 +25,8 @@
     "react-select": "^5.7.0",
     "redux": "^4.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
