--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
