--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "convert-xls-files-to-json": "^1.0.0",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-scroll": "^1.8.8",
     "react-select": "^5.7.0",
     "redux": "^4.2.0",
+    "simple-excel-to-json": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
